; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/cxgbetool/extr_tcb_common.c_display_tcb.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/cxgbetool/extr_tcb_common.c_display_tcb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_prntstyl = common dso_local global i64 0, align 8
@PRNTSTYL_VERBOSE = common dso_local global i64 0, align 8
@PRNTSTYL_RAW = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@PRNTSTYL_LIST = common dso_local global i64 0, align 8
@PRNTSTYL_COMP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @display_tcb(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* @g_prntstyl, align 8
  %8 = load i64, i64* @PRNTSTYL_VERBOSE, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %14, label %10

10:                                               ; preds = %3
  %11 = load i64, i64* @g_prntstyl, align 8
  %12 = load i64, i64* @PRNTSTYL_RAW, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %10, %3
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @tcb_hexdump(i32 0, i8* %15, i32 128)
  %17 = call i32 @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %14, %10
  %19 = load i64, i64* @g_prntstyl, align 8
  %20 = load i64, i64* @PRNTSTYL_VERBOSE, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %26, label %22

22:                                               ; preds = %18
  %23 = load i64, i64* @g_prntstyl, align 8
  %24 = load i64, i64* @PRNTSTYL_LIST, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %22, %18
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @display_list_tcb(i32* %27, i32 %28)
  br label %30

30:                                               ; preds = %26, %22
  %31 = load i64, i64* @g_prntstyl, align 8
  %32 = load i64, i64* @PRNTSTYL_VERBOSE, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %38, label %34

34:                                               ; preds = %30
  %35 = load i64, i64* @g_prntstyl, align 8
  %36 = load i64, i64* @PRNTSTYL_COMP, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %38, label %42

38:                                               ; preds = %34, %30
  %39 = load i32*, i32** %4, align 8
  %40 = load i32, i32* %6, align 4
  %41 = call i32 @display_tcb_compressed(i32* %39, i32 %40)
  br label %42

42:                                               ; preds = %38, %34
  ret void
}

declare dso_local i32 @tcb_hexdump(i32, i8*, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @display_list_tcb(i32*, i32) #1

declare dso_local i32 @display_tcb_compressed(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
